# aggreagator

./: .gitattributes  .gitignore  README.md  docker-compose.dustar.yml  docker-compose.yml
.claude/: settings.local.json
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
server/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_processes_rag.py  0003_themes.py  0004_dedup_items.py  0005_item_due.py
server/app/: auth.py  backfill_processes.py  backfill_themes.py  config.py  db.py  main.py
server/app/api/: areas.py  auth.py  devices.py  groups.py  ingest.py  items.py  processes.py  projects.py  rule_suggestions.py  rules.py  search.py  stats.py  tags.py  themes.py
server/app/models/: __init__.py  entities.py
server/app/pipeline/: __init__.py  classifier.py  composite.py  dedup.py  embeddings.py  junk_filter.py  llm_provider.py  llm_router.py  passthrough.py  process_linker.py  relation_finder.py  rule_suggester.py  rules_engine.py  runner.py  theme_linker.py
server/app/schemas/: area.py  common.py  device.py  error.py  group.py  ingest.py  item.py  process.py  process_graph.py  project.py  rule.py  rule_suggestion.py  search.py  stats.py  theme.py
server/db/: schema.sql
server/tests/: conftest.py  test_areas_projects.py  test_auth.py  test_classification_2b.py  test_devices.py  test_groups_rules_tags.py  test_ingest.py  test_items.py  test_passthrough_classifier.py  test_process_linker_unit.py
web/: Dockerfile  (+5 more)
(+103 files in other folders)
